force-app/main/default/objects/Product2/fields/AOE_required__c.field-meta.xml
<CustomField>
    <fullName>AOE_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOE required</label>
    <type>Checkbox</type>
</CustomField>