force-app/main/default/objects/Product2/fields/avaoms__Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>