force-app/main/default/objects/Product2/fields/avaoms__UPC__c.field-meta.xml
<CustomField>
    <fullName>avaoms__UPC__c</fullName>
    <label>UPC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>