force-app/main/default/objects/Product2/fields/Exclude_from_registration__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from registration</label>
    <type>Checkbox</type>
</CustomField>