force-app/main/default/objects/Product2/fields/Franchise_Category__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Category__c</fullName>
    <label>Franchise Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>