force-app/main/default/objects/Product2/fields/Is_Covid_Flu_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Covid_Flu_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Covid Flu Test</label>
    <type>Checkbox</type>
</CustomField>