force-app/main/default/objects/Product2/fields/Max_age__c.field-meta.xml
<CustomField>
    <fullName>Max_age__c</fullName>
    <label>Max age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>