force-app/main/default/objects/Product2/fields/Min_age__c.field-meta.xml
<CustomField>
    <fullName>Min_age__c</fullName>
    <label>Min age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>