force-app/main/default/objects/Product2/fields/otcCleared__c.field-meta.xml
<CustomField>
    <fullName>otcCleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>otcCleared</label>
    <type>Checkbox</type>
</CustomField>