force-app/main/default/objects/Product2/fields/performingSite__c.field-meta.xml
<CustomField>
    <fullName>performingSite__c</fullName>
    <label>performingSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>