force-app/main/default/objects/Product2/fields/primaryCategory__c.field-meta.xml
<CustomField>
    <fullName>primaryCategory__c</fullName>
    <label>primaryCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>