force-app/main/default/objects/Product2/fields/productId_Ecom__c.field-meta.xml
<CustomField>
    <fullName>productId_Ecom__c</fullName>
    <description>Matching field for SFCC --&gt; OMS product sync</description>
    <externalId>true</externalId>
    <label>ProductId Ecom</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>