force-app/main/default/objects/Product2/fields/pwnEligible__c.field-meta.xml
<CustomField>
    <fullName>pwnEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pwnEligible</label>
    <type>Checkbox</type>
</CustomField>