force-app/main/default/objects/Product2/fields/resultingRequired__c.field-meta.xml
<CustomField>
    <fullName>resultingRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resultingRequired</label>
    <type>Checkbox</type>
</CustomField>