force-app/main/default/objects/Product2/fields/testType__c.field-meta.xml
<CustomField>
    <fullName>testType__c</fullName>
    <label>testType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>